# lirc-changer-rust

./: Cargo.toml  Makefile  README.md
.github/workflows/: rust.yml
config/: lirc-changer-rust.service
src/: event.rs  main.rs
src/listener/: main.rs
src/sender/: main.rs
