[package]
name = "lirc-changer-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.5"
ctrlc = { version = "3.0", features = ["termination"] }
crossbeam-channel = "0.5"
signal-hook = "0.3.14"
env_logger = "0.9.0"
log = "0.4.17"

[[bin]]
name = "changer"
path = "src/main.rs"

[[bin]]
name = "listener"
path = "src/listener/main.rs"

[[bin]]
name = "sender"
path = "src/sender/main.rs"